force-app/main/default/objects/Account/fields/Normalized_Domain__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Domain__c</fullName>
    <description>BR-03. Registrable domain normalized from Website, mirroring the Lead Flow normalization exactly so the two are comparable. Formula: zero storage, always current, SOQL-filterable.</description>
    <formula><![CDATA[IF(ISBLANK(Website), "", IF(FIND("/", IF(LEFT(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", ""), 4) = "www.", MID(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", ""), 5, 255), SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", ""))) > 0, LEFT(IF(LEFT(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", ""), 4) = "www.", MID(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", ""), 5, 255), SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", "")), FIND("/", IF(LEFT(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", ""), 4) = "www.", MID(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", ""), 5, 255), SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", ""))) - 1), IF(FIND("?", IF(LEFT(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", ""), 4) = "www.", MID(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", ""), 5, 255), SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", ""))) > 0, LEFT(IF(LEFT(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", ""), 4) = "www.", MID(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", ""), 5, 255), SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", "")), FIND("?", IF(LEFT(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", ""), 4) = "www.", MID(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", ""), 5, 255), SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", ""))) - 1), IF(LEFT(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", ""), 4) = "www.", MID(SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", ""), 5, 255), SUBSTITUTE(SUBSTITUTE(LOWER(TRIM(Website)), "https://", ""), "http://", "")))))]]></formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Normalized company domain used to match inbound Leads to this Account.</inlineHelpText>
    <label>Normalized Domain</label>
    <type>Text</type>
</CustomField>