force-app/main/default/objects/Account/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>BR-05. Derived revenue segment for the Account.</description>
    <inlineHelpText>Derived revenue segment.</inlineHelpText>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NIQ_Segment</valueSetName>
    </valueSet>
</CustomField>