force-app/main/default/objects/Account/fields/Strategic_Account__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BR-07/PD-02. Explicit designation set by Revenue Operations. Never derived from size or revenue.</description>
    <inlineHelpText>Designated Strategic. Set deliberately - not calculated.</inlineHelpText>
    <label>Strategic Account</label>
    <type>Checkbox</type>
</CustomField>